fix: set side-nav nav overflow-y to auto

--- a/src/components/Styles/sideNav.css
+++ b/src/components/Styles/sideNav.css
@@ -6,11 +6,12 @@
     top: 0;
     left: 0;
     z-index: 2;
-    display: none;
 }
 
 .side-nav nav {
     padding: 1.5rem;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .side-nav ul {
